# parolo

./: .gitignore  CLAUDE.md  README.md  build_package.sh  main.py  pyproject.toml  pytest.ini
parolo/: __init__.py  _core.py  core.py  prompt.py  tenants.py
tests/: test_backcompat_behavior.py  test_namespaced_api.py  test_packaging_slow.py  test_prompt.py  test_tenants.py
