[project]
description = "A version-controlled prompt system for LLM workflows."
name = "parolo"
version = "0.1.1"
authors = [{ name = "Matthias Rebel", email = "matthias.rebel@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pytest>=8.4.1"]

[project.optional-dependencies]
dev = ["pytest", "build", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
